Fix issues with profile button not showing

--- a/src/components/app-dashboard/app-dashboard.scss
+++ b/src/components/app-dashboard/app-dashboard.scss
@@ -1,23 +1,27 @@
 app-dashboard {
-    ion-list {
-        padding: 0 1rem;
-    }
-    ion-item {
-        display: flex;
-        justify-content: space-between;
-        margin: 1.5rem;
-        padding-bottom: 1rem;
-        border-bottom: 1px solid var(--ion-color-secondary);
-    }
-    h2 {
-        font-size: 2.5rem;
-        color: var(--ion-color-secondary);
-    }
-    img {
-        width: auto !important;
-        border-radius: 100% !important;
-    }
-    ion-badge {
-        margin-right: 1rem;
-    }
+  ion-list {
+    padding: 0 1rem;
+  }
+  ion-item {
+    display: flex;
+    justify-content: space-between;
+    margin: 1.5rem;
+    padding-bottom: 1rem;
+    border-bottom: 1px solid var(--ion-color-secondary);
+  }
+  h2 {
+    font-size: 2.5rem;
+    color: var(--ion-color-secondary);
+  }
+  .photo {
+    width: 50px;
+    height: 50px;
+    border-radius: 100%;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+  }
+  ion-badge {
+    margin-right: 1rem;
+  }
 }
